fix: get all doctors, but only full name and image